# agent-loop

./: .gitignore  AGENTS.md  README.md  context-summary.md  learning.md  legacy_agent_loop.py  plan.md  progress.md  pyproject.toml
docs/delivery/: pub-guide.md  technical-overview.md
docs/handoffs/: README.md  executor-response-template.md  request-template.md
docs/handoffs/2026-06-15/: 01-execution-fixes-request.md  02-executor-response.md  03-supervisor-review.md  04-fix-request.md  05-executor-response.md  06-supervisor-review.md  07-fix-request.md  08-executor-response.md  09-supervisor-review.md  10-fix-request.md  11-executor-response.md  12-supervisor-review.md  13-fix-request.md  14-executor-response.md  15-supervisor-review.md
docs/specs/: 2026-06-15-agent-loop-orchestrator-design.md
scratch/: test_agy_usage.py
skills/brainstorming/: SKILL.md
skills/debugging/: skill.md
src/agent_loop/: adapters.py  cli.py  config.py  database.py  git_utils.py  handoffs.py  orchestrator.py  plan_schema.json  repositories.py  views.py
src/agent_loop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_adapters.py  test_cli.py  test_config.py  test_database.py  test_git_utils.py  test_handoffs.py  test_migration_policy.py  test_orchestrator.py  test_quota.py  test_second_pass_fixes.py  test_views.py
