[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-loop"
version = "0.1.0"
description = "Provider-neutral, resumable agent-loop orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agent-loop = "agent_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
